fix some main section fill

--- a/index.html
+++ b/index.html
@@ -24,11 +24,29 @@
 <h3 class="nav-logo-name inter-normal">LOGO</h3>
 <input class="nav-btn raleway-normal" type="button" value="Sign Up">
         </div>
-        <div class="nav-heading">
-            <h1 class="nav-heading1">Cool Dark UI Template for</h1>
-            <h1 class="nav-heading1">Webflow Agencies!</h1>
+        <!-- BANNER SECTION -->
+        <div class="banner-section">
+            <h1 class="banner-heading1">Cool Dark UI Template for</h1>
+            <h1 class="banner-heading1">Webflow Agencies!</h1>
             <input class="nav-btn stay raleway-normal" type="button" value="Stay Focused">
         </div>
     </nav>
+
+    <!-- ACTION SECTION  -->
+     <main>
+        <div class="action-section">
+            <div class="action-container">
+<h1 class="action-title raleway-normal">See It in Action</h1>
+<p class="action-sub-title raleway-normal">Explore the live preview and imagine your <br> brand in this bold new look.</p>
+
+<input class="nav-btn livebtn raleway-normal" type="button" value="Launch Live Preview">
+            </div>
+            <div class="action-img">
+                <img class="action-image" src="Assets/wc-mini.png" alt="">
+            </div>
+        </div>
+
+       
+     </main>
 </body>
 </html>
