--- a/index.html
+++ b/index.html
@@ -46,7 +46,28 @@
             </div>
         </div>
 
-       
+       <!-- USER SECTION -->
+        <div class="user-section">
+            <div class="user-container">
+               <h2 class="user-title raleway-normal">Joined Thousands of Productive Users</h2>
+                 <div class="sub-title-container">
+
+      <div class="main-sub">
+        <h1 class="user-count inter-normal">50K</h1>
+        <span class="mini-sub inter-normal">Active Users</span>
+      </div>
+      <div class="main-sub">
+        <h1 class="user-count inter-normal">2M+</h1>
+        <span class="mini-sub inter-normal">Focus Sessions</span>
+      </div>
+      <div class="main-sub">
+        <h1 class="user-count inter-normal">95%</h1>
+        <span class="mini-sub inter-normal">Satisfaction Rate</span>
+      </div>
+            </div>
+            </div>
+          
+        </div>
      </main>
 </body>
 </html>
