added feedback section

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <nav class="nav-container">
         <div class="logo-container">
 <h3 class="nav-logo-name inter-normal">LOGO</h3>
-<input class="nav-btn raleway-normal" type="button" value="Sign Up">
+<input class="primary-btn raleway-normal" type="button" value="Sign Up">
         </div>
         <!-- BANNER SECTION -->
         <div class="banner-section">
             <h1 class="banner-heading1">Cool Dark UI Template for</h1>
             <h1 class="banner-heading1">Webflow Agencies!</h1>
-            <input class="nav-btn stay raleway-normal" type="button" value="Stay Focused">
+            <input class="primary-btn stay raleway-normal" type="button" value="Stay Focused">
         </div>
     </nav>
 
@@ -39,7 +39,7 @@
 <h1 class="action-title raleway-normal">See It in Action</h1>
 <p class="action-sub-title raleway-normal">Explore the live preview and imagine your <br> brand in this bold new look.</p>
 
-<input class="nav-btn livebtn raleway-normal" type="button" value="Launch Live Preview">
+<input class="primary-btn livebtn raleway-normal" type="button" value="Launch Live Preview">
             </div>
             <div class="action-img">
                 <img class="action-image" src="Assets/wc-mini.png" alt="">
@@ -68,6 +68,74 @@
             </div>
           
         </div>
+
+        <!-- FEEDBACK SECTION -->
+        <div class="feedback-section">
+            <div class="feeback-container">
+                <h1 class="feedback-title">What our users say</h1>
+                <div class="card-container">
+                <div class="reviews-user-container">
+                    <div class="star">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-title inter-normal">Loved by Designers</h4>
+                    <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
+                    <div class="reviewr-section">
+                        <img class="reviewe-photo" src="Assets/avatar.png" alt="">
+                        <div class="reviews-name-date">
+                            <span class="name inter-normal"> Michael</span>
+                            <span class="date inter-normal">11.07.2025</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="reviews-user-container">
+                    <div class="star">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-title inter-normal">Loved by Designers</h4>
+                    <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
+                    <div class="reviewr-section">
+                        <img class="reviewe-photo" src="Assets/avatar.png" alt="">
+                        <div class="reviews-name-date">
+                            <span class="name inter-normal">David</span>
+                            <span class="date inter-normal">11.07.2025</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="reviews-user-container">
+                    <div class="star">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-title inter-normal">Loved by Designers</h4>
+                    <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
+                    <div class="reviewr-section">
+                        <img class="reviewe-photo" src="Assets/avatar.png" alt="">
+                        <div class="reviews-name-date">
+                            <span class="name inter-normal">Alex</span>
+                            <span class="date inter-normal">11.07.2025</span>
+                        </div>
+                    </div>
+                </div>
+</div>
+            </div>
+        </div>
+
+        
      </main>
 </body>
 </html>
