added optional section

--- a/index.html
+++ b/index.html
@@ -74,24 +74,6 @@
             <div class="feeback-container">
                 <h1 class="feedback-title">What our users say</h1>
                 <div class="card-container">
-                <div class="reviews-user-container">
-                    <div class="star">
-                        <img class="icon-star" src="Assets/icon-star.png" alt="">
-                        <img class="icon-star" src="Assets/icon-star.png" alt="">
-                        <img class="icon-star" src="Assets/icon-star.png" alt="">
-                        <img class="icon-star" src="Assets/icon-star.png" alt="">
-                        <img class="icon-star" src="Assets/icon-star.png" alt="">
-                    </div>
-                    <h4 class="review-title inter-normal">Loved by Designers</h4>
-                    <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
-                    <div class="reviewr-section">
-                        <img class="reviewe-photo" src="Assets/avatar.png" alt="">
-                        <div class="reviews-name-date">
-                            <span class="name inter-normal"> Michael</span>
-                            <span class="date inter-normal">11.07.2025</span>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="reviews-user-container">
                     <div class="star">
@@ -103,17 +85,16 @@
                     </div>
                     <h4 class="review-title inter-normal">Loved by Designers</h4>
                     <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
-                    <div class="reviewr-section">
+                    <div class="reviewer-section">
                         <img class="reviewe-photo" src="Assets/avatar.png" alt="">
                         <div class="reviews-name-date">
-                            <span class="name inter-normal">David</span>
+                            <span class="name inter-normal">Michael</span>
                             <span class="date inter-normal">11.07.2025</span>
                         </div>
                     </div>
                 </div>
 
-
-                <div class="reviews-user-container">
+                 <div class="reviews-user-container">
                     <div class="star">
                         <img class="icon-star" src="Assets/icon-star.png" alt="">
                         <img class="icon-star" src="Assets/icon-star.png" alt="">
@@ -123,19 +104,50 @@
                     </div>
                     <h4 class="review-title inter-normal">Loved by Designers</h4>
                     <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
-                    <div class="reviewr-section">
+                    <div class="reviewer-section">
                         <img class="reviewe-photo" src="Assets/avatar.png" alt="">
                         <div class="reviews-name-date">
-                            <span class="name inter-normal">Alex</span>
+                            <span class="name inter-normal">Michael</span>
                             <span class="date inter-normal">11.07.2025</span>
                         </div>
                     </div>
                 </div>
+
+                 <div class="reviews-user-container">
+                    <div class="star">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                        <img class="icon-star" src="Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-title inter-normal">Loved by Designers</h4>
+                    <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
+                    <div class="reviewer-section">
+                        <img class="reviewe-photo" src="Assets/avatar.png" alt="">
+                        <div class="reviews-name-date">
+                            <span class="name inter-normal">Michael</span>
+                            <span class="date inter-normal">11.07.2025</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                
 </div>
             </div>
         </div>
 
-        
+        <!-- OPTIONAL SECTION -->
+         <div class="optional-section">
+            <div class="optional-container">
+                <h1 class="optional-title">Ready to focus better</h1>
+                <p class="optional-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <input class="primary-btn raleway-normal" type="button" value="Get Free">
+                <img class="optional-photo" src="Assets/wc-big.png" alt="">
+            </div>
+         </div>
+
      </main>
 </body>
 </html>
