--- a/index.html
+++ b/index.html
@@ -148,6 +148,22 @@
             </div>
          </div>
 
+         <!-- FORM SECTION -->
+          <form class="form-section">
+            <div class="form-container">
+                <h1 class="form-title raleway-normal">Let’s Get in <br> Touch</h1>
+                <div class="main-form">
+                    <label for="">Email</label>
+                    <input class="form-input inter-normal" type="email" placeholder="example@email.com">
+
+                    <label for="">Name</label>
+                    <input class="form-input inter-normal" type="text" placeholder="Full Name">
+                   <label for="">Message</label>
+                    <textarea  class="inter-normal" placeholder="Write your message...."></textarea>
+                </div>
+            </div>
+          </form>
      </main>
+    
 </body>
 </html>
