added footer section and others

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="nav-container">
         <div class="logo-container">
 <h3 class="nav-logo-name inter-normal">LOGO</h3>
-<input class="primary-btn raleway-normal" type="button" value="Sign Up">
+<input class="primary-btn  raleway-normal" type="button" value="Sign Up">
         </div>
         <!-- BANNER SECTION -->
         <div class="banner-section">
@@ -160,10 +160,29 @@
                     <input class="form-input inter-normal" type="text" placeholder="Full Name">
                    <label for="">Message</label>
                     <textarea  class="inter-normal" placeholder="Write your message...."></textarea>
+                    <input class="primary-btn get raleway-normal" type="button" value="Get in Touch">
                 </div>
             </div>
           </form>
      </main>
-    
+
+     <!-- FOOTER-SECTION -->
+
+     <footer>
+        <div class="footer-container inter-normal">
+            <h1 class="footer-title">LOGO</h1>
+            <p class="footer-sub-title">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+
+            <div class="navigation-bar inter-normal">
+                <ul>
+                    <li><a class="bar-text" href="">Home</a></li>
+                    <li><a class="bar-text" href="">About</a></li>
+                    <li><a class="bar-text" href="">How it Works</a></li>
+                    <li><a class="bar-text" href="">Services</a></li>
+                </ul>
+            </div>
+
+        </div>
+     </footer>
 </body>
 </html>
