changed image path

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <h4 class="review-title inter-normal">Loved by Designers</h4>
                     <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
                     <div class="reviewer-section">
-                        <img class="reviewe-photo" src="po2.png" alt="">
+                        <img class="reviewe-photo" src="Assets/po2.png" alt="">
                         <div class="reviews-name-date">
                             <span class="name inter-normal">Michael</span>
                             <span class="date inter-normal">11.07.2025</span>
@@ -124,7 +124,7 @@
                     <h4 class="review-title inter-normal">Loved by Designers</h4>
                     <span class="review-sub-title inter-normal">This template instantly leveled up our presence.” – Studio Vertex</span>
                     <div class="reviewer-section">
-                        <img class="reviewe-photo" src="po.png" alt="">
+                        <img class="reviewe-photo" src="Assets/po.png" alt="">
                         <div class="reviews-name-date">
                             <span class="name inter-normal">David</span>
                             <span class="date inter-normal">11.07.2025</span>
